# lfas

./: Cargo.toml  LICENSE  Makefile  README.md  app.py  pyproject.toml  script.py
.streamlit/: config.toml
benches/: concurrency_benchmark.rs  index_benchmark.rs  persistance_benchmark.rs  search_benchmark.rs  tokenizer_benchmark.rs
src/: engine.rs  index.rs  lib.rs  main.rs  metadata.rs  postings.rs  python.rs  scorer.rs  storage.rs  timing.rs  tokenizer.rs
src/storage/: lmdb.rs  memory.rs  mod.rs
tests/: test_engine.rs  test_index.rs  test_metadata.rs  test_postings.rs  test_tokenizer.rs
