[package]
name = "lfas"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
lazy_static = "1.5.0"
nltk = "0.1.0"
regex = "1.12.3"
roaring = "0.11.3"
serde = { version = "1.0.228", features = ["derive"] }
stopwords = "0.1.1"
unicode-normalization = "0.1.25"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "index_benchmark"
harness = false

