[package]
name = "lfas"
version = "0.1.0"
edition = "2024"

[lib]
name = "lfas"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.4.0"
fake = { version = "4.4.0", features = ["derive"] }
lazy_static = "1.5.0"
log = "0.4.29"
nltk = "0.1.0"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
pyo3-log = "0.13.2"
rand = "0.9.2"
regex = "1.12.3"
roaring = "0.11.3"
serde = { version = "1.0.228", features = ["derive"] }
stopwords = "0.1.1"
unicode-normalization = "0.1.25"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "index_benchmark"
harness = false

[[bench]]
name = "search_benchmark"
harness = false
