[project]
name = "lfas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "maturin>=1.11.5",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "lfas"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.7.4",
]